--- a/flask_app/templates/main/index.html
+++ b/flask_app/templates/main/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group help">
                     <input type="date" name="calendar" value="{{ today }}" min="{{ today }}" max="{{ max_day }}"
-                        class="form-control" placeholder="Пароль" name="date">
+                        class="form-control" placeholder="Пароль">
                 </div>
                 <div class="form-group help">
                     <select name="ta" id="ta" class="selectpicker form-control">
