--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -17,19 +17,19 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='login.css') }}">
-    <title>PassMan - {{ title }}</title>
+    <title>AutoBaze - {{ title }}</title>
 </head>
 
 <body>
     <style>
         body {
-            background-color: antiquewhite;
+            background-color: #d8dfe2;
         }
     </style>
     <!-- Навигация -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">PassMan</a>
+            <a class="navbar-brand" href="#">AutoBaze</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
