--- a/flask_app/templates/manage/manager_profile.html
+++ b/flask_app/templates/manage/manager_profile.html
@@ -35,6 +35,11 @@
                                 href="{{ url_for('manage.add_manager') }}"
                                 style="text-decoration: none; color:white">Добавить менеджера</a></button>
                     </p>
+                    <p class="card-text">
+                        <button type="button" class="btn btn-primary" id="btn"><a
+                                href="{{ url_for('manage.add_stop') }}"
+                                style="text-decoration: none; color:white">Добавить остановку</a></button>
+                    </p>
                 </div>
             </div>
         </div>
@@ -65,7 +70,7 @@
             </div>
             <div class="row">
                 {% for order in orders %}
-                <div class="card" id="card" style="width: 18rem;color:#0D160B;">
+                <div class="card" id="card" style="width: 20rem;color:#0D160B;">
                     <div class="card-body">
                         <h5 class="card-title">{{ order.date|date }}</h5>
                         <h6 class="card-subtitle mb-2 text-muted">{{ order.FCs }}</h6>
@@ -79,6 +84,7 @@
                             {% else %}
                             Вес груза: {{ order.amount}}<br>
                             {% endif %}
+                            Остановки: {{order.stops}}
                         </p>
                         {% if order.state == "Одобрено" %}
                         <p style="color:green;">
@@ -96,6 +102,20 @@
                         <a href="{{ url_for('manage.accept_order',id=order.id) }}" class="card-link">Принять</a>
                         <a href="{{ url_for('manage.decline_order',id=order.id) }}" class="card-link">Отклонить</a>
                         <a href="{{ url_for('manage.delete_order',id=order.id) }}" class="card-link">Удалить</a>
+                        <hr>
+                        <div class="btn-group dropend">
+                            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                Добавить остановку
+                            </button>
+                            <ul class="dropdown-menu">
+                                {% for stop in stops %}
+                                <li><a href="{{ url_for('manage.bind_stop',stop_id=stop.id,order_id=order.id) }}">{{
+                                        stop.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 {% endfor %}
