--- a/flask_app/templates/main/index.html
+++ b/flask_app/templates/main/index.html
@@ -49,7 +49,7 @@
             document.getElementsByName("amount")[0].placeholder = "Количество пассажиров";
         }
         else if (trnsp.value === "2") {
-            document.getElementsByName("amount")[0].placeholder = "Вес груза";
+            document.getElementsByName("amount")[0].placeholder = "Вес груза (в тоннах)";
         }
     });
 </script>
