--- a/flask_app/templates/profile/change_master_password.html
+++ b/flask_app/templates/profile/change_master_password.html
@@ -5,7 +5,7 @@
         <div class="col-md-offset-3 col-md-6">
             <form class="form-horizontal" method="POST" action="">
                 {{ form.hidden_tag() }}
-                <span class="heading">СМЕНА МАСТЕР-ПАРОЛЯ</span>
+                <span class="heading">СМЕНА ПАРОЛЯ</span>
                 <div class="form-group">
                     {{ form.current_password.label(class="form-control-label") }}
                     {% if form.current_password.errors %}
