Report system started

--- a/flask_app/templates/manage/manager_profile.html
+++ b/flask_app/templates/manage/manager_profile.html
@@ -31,6 +31,11 @@
                                 href="{{ url_for('manage.add_stop') }}"
                                 style="text-decoration: none; color:white">Добавить остановку</a></button>
                     </p>
+                    <p class="card-text">
+                        <button type="button" class="btn btn-primary" id="btn"><a
+                                href="{{ url_for('manage.create_report') }}"
+                                style="text-decoration: none; color:white">Составить отчёт</a></button>
+                    </p>
                 </div>
             </div>
         </div>
