--- a/flask_app/templates/manage/create_report.html
+++ b/flask_app/templates/manage/create_report.html
@@ -8,7 +8,7 @@
             <input type="date" name="date_from" class="form-control">
         </div>
         <div class="form-group help">
-            <input type="date" name="date_to" class="form-control">
+            <input type="date" name="date_to" class="form-control" max="{{ today }}">
         </div>
         <div class="form-group help">
             <button type="submit" class="btn btn-default">Собрать</button>
