--- a/flask_app/templates/manage/manager_profile.html
+++ b/flask_app/templates/manage/manager_profile.html
@@ -45,6 +45,9 @@
                 <h5 class="card-title">День {{ day.date }}</h5>
                 <h6 class="card-title">Количество заявок: {{ 20-day.orders_amount }}</h6>
                 <p class="card-text">
+                    <a href="{{ url_for('manage.day_details',id=day.id) }}">Подробнее</a>
+                </p>
+                <p class="card-text">
                     <a href="{{ url_for('manage.delete_day',id=day.id) }}">Удалить</a>
                 </p>
             </div>
@@ -55,7 +58,7 @@
             <div class="btn-group dropend">
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    Фильтр
+                    Статус
                 </button>
                 <ul class="dropdown-menu">
                     <li><a href="{{ url_for('manage.mprofile',filter='В обработке') }}">В обработке</a></li>
@@ -64,6 +67,20 @@
                     <li><a href="{{ url_for('manage.mprofile',filter='Все') }}">Сбросить<a></li>
                 </ul>
             </div>
+            <!-- <div>
+                <div class="btn-group dropend">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Тип
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('manage.mprofile',filter='Грузоперевозка') }}">Грузоперевозка</a>
+                        </li>
+                        <li><a href="{{ url_for('manage.mprofile',filter='Пассажирская') }}">Пассажирская</a>
+                        </li>
+                    </ul>
+                </div>
+            </div> -->
             <div class="row">
                 {% for order in orders %}
                 <div class="card" id="card" style="width: 20rem;color:#0D160B;">
