--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -83,7 +83,7 @@
             </div>
         </div>
     </main>
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" style="bottom: 0;">
         <div class="col-md-4 d-flex align-items-center">
             <span class="text-muted" style="margin-left:5px"> © 2021 AutoBaze</span>
         </div>
